2005-11-04 10:19 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase -1: made an array of GridEdger
	pointers to seperate gridedgerInsert from gridedgerRemoveUnused
	to make plots inbetween. Note that renum call backs are not
	implemented, so do renumber (by plotting) and keep calling
	gridedger routines.

2005-11-03 22:22 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase -1: remove unused nodes after
	ideal insertion

2005-11-03 17:30 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerRemoveUnused) to remove the unused nodes
	stored off in gridedgerInsert with gridCollapseEdge and leave only
	nodes int `ideal' locations.

2005-11-03 16:57 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeRatio) use gridInterpolateMap2
	and gridInterpolateAux2 to interpolate newly inserted node
	data instead of averaging. (they are equivalent for a ratio of
	0.5, used by the parallel fun3d interface)

2005-11-02 23:05 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridInterpolateAux2) will set a target node aux data
	to a linear combination of two other nodes (to be used for edge
	split).
	* src/grid.c (gridInterpolateMap2) will set a target node map data
	to a linear combination of two other nodes (to be used for edge
	split).


2005-10-29 23:57 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerInsert) no interface to it yet, but
	existing unused nodes are stored off so that they may be removed
	later.

2005-10-29 15:42 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase -1 option: added insert, error
	handling, and output.

2005-10-29 11:09 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerInsert) got it working with stored 
	ideal t values.

2005-10-28 23:20 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerIdealNodes,gridedgerIdealNodeT)
	renamed from gridedgerNodes, gridedgerNodeS to store t's, because
	they are invariant as nodes are added.
