@@ -59,6 +59,7 @@ GridEdger *gridedgerLengthToS(GridEdger *, double segment, double length,
 
 GridEdger *gridedgerDiscretize(GridEdger *, double length );
 GridEdger *gridedgerDiscretizeEvenly(GridEdger * );
+GridEdger *gridedgerDiscretizeOnce(GridEdger * );
 
 GridEdger *gridedgerInsert(GridEdger *);
 GridEdger *gridedgerRemoveUnused(GridEdger *);
